Pre-final Draft of Bootstrap Portfolio - need to modify CSS color scheme / font-styles - need to fix collapse / stack of nav navbar-nav when on sm and xs viewport

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,6 @@ main.container {
     padding-bottom: 20px;
 }
 
-.panel-content img {
-    padding-right: 10px;
-}
-
 main span {
     line-height: 2.0em;
 }
@@ -111,4 +107,9 @@ main span {
     height: 40px; 
     line-height: 40px; 
     text-align: center;
+}
+
+#imgMargin {
+    margin-right: 20px;
+    margin-bottom: 15px;
 }
